tests/baselines/reference/moduleResolution_packageJson_yesAtPackageRoot_mainFieldInSubDirectory.errors.txt
/index.ts(1,19): error TS2307: Cannot find module 'foo'.


==== /node_modules/foo/package.json (0 errors) ====
    { "name": "foo", "version": "1.2.3", "main": "src/index.js" }
    
==== /node_modules/foo/src/index.d.ts (0 errors) ====
    export const x: number;
    
==== /index.ts (1 errors) ====
    import { x } from "foo";
                      ~~~~~
!!! error TS2307: Cannot find module 'foo'.
    